// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When running rsk in the command line class component should match the snapshot 1`] = `
"import React from \\"react\\";

class Potato extends React.Component {
  render() {
    return <div>Potato</div>;
  }
}

export default Potato;
"
`;

exports[`When running rsk in the command line stateless functional component should match the snapshot 1`] = `
"import React from \\"react\\";

const Potato = () => {
  return <div>Potato</div>;
};

export default Potato;
"
`;
